<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ATabletApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="string_forward">forward</string>
    <string name="string_backward">backward</string>
    <string name="string_left">left</string>
    <string name="string_right">right</string>
    <string name="string_stop">stop</string>
    <color name="color_red">#ff0000</color>
    <color name="color_white">#ffffff</color>
    <color name="color_yellow">#ffff00</color>
    <color name="color_green">#008000</color>
    <color name="color_greenyellow">#adff2f</color>
    <dimen name="largeFontStatic24">24dp</dimen>
    <dimen name="margin06">6dp</dimen><dimen name="margin12">12dp</dimen><dimen name="margin24">24dp</dimen>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="dialog_speed_pick_message">Change the Speed of the VEX robot</string>
    <string name="dialog_change_speed">Change Speed</string>
    <string name="dialog_cancel_change">Cancel</string>
    <string name="string_speed">Change Speed</string>
    <string name="string_exit">exit</string>
    <color name="color_lightlavender">#CCCCFF</color>
    <color name="color_brightblue">#0099cc</color><color name="color_matching_blue">#33b5e5</color><string name="Unknown">Unknown</string>
    <string name="string_chooseWayPoint">Choose Way Point</string>
    <string name="string_newWayPoint">Create New Way Point Here</string>
    <string name="string_manualNewWayPoint">Create New Way Point Manually</string><string name="string_comehomeWayPoint">Come Home</string>
    <string name="dialog_select_waypoint">Go To This WP</string><string name="dialog_add_waypoint">Yes, Add New Way Point</string><string name="dialog_wp_pick_message">Choose a WayPoint that the robot should go to.</string>
    <string name="msg_manualNewWP_instr">Instructions: Please enter the numerical Latitude and Longitude values for the new Way Point.</string>
    <string name="string_controller">Remote Control</string>
    <string name="string_tilt">Tilt Control</string>
    <string name="string_runProgram">Run Program</string>
    
    
    
    
    
    

</resources>
